--- a/style.css
+++ b/style.css
@@ -13,16 +13,15 @@ ul {
    
   }
 header{
-    display: flex;
-    position:sticky ;
+   
+   
     width: 100%;
-    top: 0;
     right: 0;
     z-index: 1;
     align-items: center;
     justify-content: space-between;
     padding: 20px 10%;
-
+    display: flex;
 }
 .navmenu{
     display: flex;
@@ -238,4 +237,48 @@ section{
 .social-icon i:hover{
     transform: scale(1.4);
 }
+/* RESPONSIVE CSS */
+@media(max-width:890px){
+    header{
+        padding: 10px 3%;
+        transition: 2s;
+    }
+}
+@media(max-width:890px){
+    .main-text h1{
+        font-size: 50px;
+        transition: 4s;
+    }
+    .main-text p{
+        font-size: 18px;
+        transition: 4s;
+    }
+    .main-button{
+        padding: 10px 20px;
+        transition: 4s;
+    }
+    @media(max-width:750px){
+        .navmenu{
+            position: absolute;
+            top: 100%;
+            right: 100%;
+            width: 300px;
+            height: 130vh;
+            background: #edfff1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 120px 30px;
+            transition: all .42s;
+        }
+        .navmenu a{
+            display: block;
+            margin: 180px 0;
+        }
+        .navmenu.open{
+            right: 0;
+        }
 
+}
+
+}
